# NIcpp

./: README.md
NI/: BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CMakeLists.txt  QUICK_START.md  README.md  build.bat  start.bat
NI/.claude/: settings.local.json
NI/external_libs/: BUILD_ALL.bat  README.md
NI/external_libs/mathlib_project/: CMakeLists.txt  build.bat  mathlib.cpp  mathlib.lib
NI/external_libs/prebuilt/include/: mathlib.h
NI/external_libs/prebuilt/lib/: stringutils.lib
NI/external_libs/stringutils_project/: CMakeLists.txt  build.bat  stringutils.cpp  stringutils.h
NI/src/: main.cpp
NI/src/core/orchestrator/: orchestrator.cpp  orchestrator.h
